--- a/style.css
+++ b/style.css
@@ -1,145 +1,55 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url(background-wood.jpg);
- }
- 
- h1{
-        font-family: "Lobster", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        color:  #503B3B;
-      
- }
- 
- .title {
-    text-align: center;
-    font-size: 3rem;
-    padding: 2rem;
- }
- 
- 
- .navbar {
-    background-color: #333;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    width: 100%;
- }
- 
- 
- .navbar a {
-    float: right;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
- }
- 
- 
- .navbar a:hover {
-    background-color: #ddd;
-    color: black;
- }
- 
- 
- .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
- }
- 
- 
- .image {
-    position: absolute;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    opacity: 0.8;
- }
- 
- 
- .image:nth-child(1) {
-    background-image: url('image1.jpg');
-    background-size: cover;
-    top: 100px;
-    left: -100px;
- }
- 
- 
- .image:nth-child(2) {
-    background-image: url('image2.jpg');
-    background-size: cover;
-    top: 50px;
-    left: 100px;
- }
- 
- 
- .image:nth-child(3) {
-    background-image: url('image3.jpg');
-    background-size: cover;
-    top: 200px;
-    left: 0px;
- }
- 
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url(bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
- body {
-   margin: 0;
-   padding: 0;
-   font-family: 'Lobster', cursive;
- }
- 
- .nav {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   background-color: #fff;
-   padding: 10px;
-   text-align: center;
-   z-index: 1;
- }
- 
- .title {
-   text-align: center;
-   padding: 50px;
- }
- 
- .logo {
-   font-size: 36px;
-   color: #333;
-   transition: opacity 0.3s ease-in-out;
- }
- 
- .logo:hover {
-   opacity: 0.5;
- }
- 
- .marquee {
-   position: relative;
-   top: 50%;
-   transform: translateY(-50%);
-   width: 100%;
-   overflow: hidden;
- }
- 
- .marquee img  {
-      width: 120px;
-      height: auto;
- }
 
- 
+.title {
+  text-align: center;
+  padding: 50px;
+}
 
- .logo {
-   color: #000; 
-   transition: color 0.3s; 
-   width: 500px;
- }
- 
- .logo:hover {
-   color: #ccc; 
- }
+
+
+.logo-link:hover {
+  opacity: 0.5;
+}
+
+.marquee {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  overflow: hidden;
+}
+
+.marquee img {
+  width: 160px;
+  height: auto;
+}
+
+@font-face {
+  font-family: "SugarAndSpice";
+  src: url(/Sugar&Spicedemo.ttf);
+}
+
+.fonts {
+  font-family: "SugarAndSpice";
+  font-size: 4rem;
+  color: #503B3B;
+}
+.logo:hover {
+  color: #ccc;
+}
+
+.logo-link {
+  justify-content: center;
+  color: #000;
+  transition: color 0.3s;
+  width: 500px;
+}
+
