--- a/nav.css
+++ b/nav.css
@@ -1,52 +1,41 @@
-#logo{
-  background-color: transparent;
-  border-color: transparent;
-  background-image: url("logo.png");
-  height: 100px;
-  width: 100px;
-  border-radius: 100%;
-  background-size: 80px;
-  background-position: center,center;
-  background-repeat: no-repeat;
-}
-#logo:hover{
-  height: 100px;
- width: 100px;
- background-color: transparent;
- opacity: .6;
- border-radius: 100%;
-}
-.nav-link{
- color: #ff914d;
- font-family: "SugarAndSpice";
- font-size: 3rem;
-
-}
-.nav-link:hover{
-  color:  rgb(223, 223, 223);;
-  font-family: "SugarAndSpice";
- font-size: 3rem;
- text-shadow: 2px 2px 2px black;
-}
-.nav-link:active{
-  color:  rgb(223, 223, 223);
-font-family: 'Dancing Script', cursive;
- font-size: 3rem;
- text-shadow: 2px 2px 2px black;
- }
-
-
- @font-face {
-  font-family: "SugarAndSpice";
-  src: url(/Sugar&Spicedemo.ttf);
+/* Global Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.nav-item{
-text-align: right;
-margin-right: 50px;
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333;
+  background-color: #f7f7f7;
 }
-body{
-background-image: url('bg.jpg');
-background-repeat: no-repeat;
-background-size: cover;
+
+.container {
+  max-width: 1200px;
+  margin: 40px auto;
+  padding: 20px;
 }
+
+.image-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.image-container img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.image-container img:nth-child(1) {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.image-container img:nth-child(2) {
+  grid-colu
